--- a/environment.yml
+++ b/environment.yml
@@ -10,11 +10,12 @@ dependencies:
   - conda-forge::rich=6.0.0
   - conda-forge::mlflow=1.11.0
   - conda-forge::tensorboardx=2.1
-  - pytorch::pytorch=1.6.0=py3.7_cuda10.1.243_cudnn7.6.3_0
-  - pytorch::torchvision=0.7.0=py37_cu101
+  - pytorch::pytorch=1.7.1
+#  - pytorch::pytorch=1.6.0=py3.7_cuda10.1.243_cudnn7.6.3_0
+#  - pytorch::torchvision=0.7.0=py37_cu101
   - pip
   - pip:
     - pycuda==2019.1.2  # not on Conda
     - system-intelligence==1.2.4  # not yet on Conda
-    - torchio==0.18.3
+#    - torchio==0.18.3
     
